syntax = "proto3";
option java_package = "grpc";

import "google/protobuf/empty.proto";

service User {
    rpc getUser(UserRequest) returns (UserResponse) {};
    rpc getUsersServerStreaming(google.protobuf.Empty) returns (stream UserResponse) {};
    rpc getUsersClientStreaming(stream UserRequest) returns (UserListResponse) {};
    rpc getUsersBidirectionalStreaming(stream UserRequest) returns (stream UserResponse) {};
}

message UserRequest {
    int32 id = 1;
}

message UserResponse {
    int32 id = 1;
    string name = 2;
    string surname = 3;
    oneof info {
        string email = 4;
        string phoneNumber = 5;
    }
    optional Sex sex = 6;
    map<string, string> preferences = 7;
}

message UserListResponse {
    repeated UserResponse users = 1;
}

enum Sex {
    MALE = 0;
    FEMALE = 1;
}
